--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
     <!-- navigation -->
     <header>
         <div class="header-container">
-        <h1>Jason Greenia</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#about">About Me</a>
-                </li>
-                <li>
-                    <a href="#work">Work</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact Me</a>
-                </li>
-                <li>
-                    <a href="./assets/Jason Greenia Resume.docx">Resume</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+            <h1>Jason Greenia</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#work">Work</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact Me</a>
+                    </li>
+                    <li>
+                        <a href="./assets/Jason Greenia Resume.docx">Resume</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <!--Hero-->
@@ -47,16 +47,20 @@
         <section class="section" id="work">
             <h2 class="section-title">Work</h2>
             <div class="section-info">
-                <div class="project cryptosource-project" onclick="location.href='https://goingblindbro.github.io/CryptoSource/'">
+                <div class="project cryptosource-project"
+                    onclick="location.href='https://goingblindbro.github.io/CryptoSource/'">
                     <div class="project-name">CryptoSource</div>
                 </div>
-                <div class="project quiz-project" onclick="location.href='https://stardotjpg.github.io/code-quiz-challenge/'">
+                <div class="project quiz-project"
+                    onclick="location.href='https://stardotjpg.github.io/code-quiz-challenge/'">
                     <div class="project-name">Quiz Game</div>
                 </div>
-                <div class="project scheduler-project" onclick="location.href='https://stardotjpg.github.io/work-day-scheduler-challenge/'">
+                <div class="project scheduler-project"
+                    onclick="location.href='https://stardotjpg.github.io/work-day-scheduler-challenge/'">
                     <div class="project-name">Work Day Scheduler</div>
                 </div>
-                <div class="project weather-project" onclick="location.href='https://stardotjpg.github.io/weather-dashboard-challenge/'">
+                <div class="project weather-project"
+                    onclick="location.href='https://stardotjpg.github.io/weather-dashboard-challenge/'">
                     <div class="project-name">Weather Forecast</div>
                 </div>
             </div>
@@ -69,8 +73,8 @@
             <div class="section-info">
                 <p class="contact-method">916-505-2369</p>
                 <a class="contact-method" href="mailto:jason.greenia@gmail.com">Email</a>
-                <a class="contact-method" href="https://github.com/StarDotJPG">GitHub</a> 
-                <a class="contact-method" href= "https://www.linkedin.com/in/jason-greenia/">LinkedIn</a>
+                <a class="contact-method" href="https://github.com/StarDotJPG">GitHub</a>
+                <a class="contact-method" href="https://www.linkedin.com/in/jason-greenia/">LinkedIn</a>
             </div>
         </section>
     </section>
