--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <!-- About Me Section -->
         <section class="section" id="about">
             <h2 class="section-title">About Me</h2>
-            <div class="section-info">
+            <div class="about-info">
+                <div class="headshot"></div>
                 <p>Full stack developer who is passionate about building interesting things.</p>
             </div>
         </section>
@@ -61,7 +62,7 @@
                 </div>
                 <div class="project weather-project"
                     onclick="location.href='https://stardotjpg.github.io/weather-dashboard-challenge/'">
-                    <div class="project-name">Weather Forecast</div>
+                    <div class="project-name">Weather Dashboard</div>
                 </div>
             </div>
         </section>
