updated cryptosource link to point to my repo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2 class="section-title">Work</h2>
             <div class="section-info">
                 <div class="project cryptosource-project"
-                    onclick="location.href='https://goingblindbro.github.io/CryptoSource/'">
+                    onclick="location.href='https://stardotjpg.github.io/CryptoSource/'">
                     <div class="project-name">CryptoSource</div>
                 </div>
                 <div class="project quiz-project"
