added cryptosource-pro project

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     onclick="location.href='https://stardotjpg.github.io/CryptoSource/'">
                     <div class="project-name">CryptoSource</div>
                 </div>
-                <div class="project quiz-project"
-                    onclick="location.href='https://stardotjpg.github.io/code-quiz-challenge/'">
-                    <div class="project-name">Quiz Game</div>
+                <div class="project cryptosource-pro"
+                    onclick="location.href='https://github.com/StarDotJPG/crypto-source-pro'">
+                    <div class="project-name">CryptoSource Pro</div>
                 </div>
                 <div class="project scheduler-project"
                     onclick="location.href='https://stardotjpg.github.io/work-day-scheduler-challenge/'">
