--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     onclick="location.href='https://stardotjpg.github.io/CryptoSource/'">
                     <div class="project-name">CryptoSource</div>
                 </div>
-                <div class="project cryptosource-pro"
-                    onclick="location.href='https://github.com/StarDotJPG/crypto-source-pro'">
-                    <div class="project-name">CryptoSource Pro</div>
+                <div class="project ebay-buddy"
+                    onclick="location.href='https://github.com/StarDotJPG/ebay-buddy'">
+                    <div class="project-name">eBay Buddy</div>
                 </div>
                 <div class="project scheduler-project"
                     onclick="location.href='https://stardotjpg.github.io/work-day-scheduler-challenge/'">
